[package]
name = "rusty_themy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightningcss = { version = "1.0.0-alpha.40", features = ["visitor"], optional = true }
cssparser = { version = "0.29.6",  optional = true }
dark-light = { version = "1.0.0", optional = true }

[features]
gtk = ["lightningcss", "cssparser", "dark-light"]
