[package]
name = "rusty_themy"
version = "0.1.0"
edition = "2021"
authors = ["Natalia Asteria <fortressnordlys@outlook.com>"]
description = "🦀🦀 Obtain the current color theme in your system! 🎨🎨"
readme = "README.md"
repository = "https://github.com/natalia-asteria/rusty_themy"
license = "MIT OR Apache-2.0"
keywords = ["ui", "theming", "gtk"]
categories = ["gui", "graphics"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightningcss = { version = "1.0.0-alpha.40", features = ["visitor"], optional = true }
cssparser = { version = "0.29.6",  optional = true }
dark-light = { version = "1.0.0", optional = true }

[features]
gtk = ["lightningcss", "cssparser", "dark-light"]
default = ["gtk"]